Getting there: added Xs and Os

--- a/Hw3/public/index.html
+++ b/Hw3/public/index.html
@@ -8,8 +8,9 @@
             width: 20px;
             height: 20px;
             border: 1px solid black;
+            text-align: center;
         }
-        
+
         td:hover {
             background: #ece7ff;
         }
